	Use all uppercase constant names
	Use 'except Exception:' in traydvm script
	Change name of popup menu name from 'udisksvm' to 'traydvm'
2013-09-27
        * 2.3.2-1 :
	Added test of 'HintSystem' property to prevent creation of icons of
	internal disks partitions if udisks2 is restarted when udisksvm is
	running
	Added version option parameter to traydvm command
2013-10-08
        * 2.3.3-1 :
	Dysfunction fixes following the Gtk3 upgrade from 3.8.4 to 3.10.0:
	Removed the tooltip feature of the system tray icon
	Removed usage of the gnome stock icons in the popup menu
	This is a temporary release before a re-writing of the popup menu
	generation and associated actions.
2013-10-15
        * 2.4.0-1 :
	Re-writing of the traydvm popup menu generation and associated actions
	Don't use deprecated features of Gtk+ 3.10:
	GtkActions, GtkUIManager and all stock items of Gnome
	The tooltip feature of the GtkStatusIcon tray icon is disabled because
	it prevents the popup menu from being shown correctly (probably a bug
	in Gtk 3.10); but the tooltip text can be seen as the popup menu title
        * 2.4.1-1 :
	Fix typo in popup menu 'Unmount' instead of 'Unount'
2013-11-18
        * 2.4.2-1 :
	Added multi media card device management
	Small improvements of drive treatment in traydvm
2013-12-18
        * 2.5.0-1 :
	Re-enabling tooltip which is now dynamically generated and shows the
	state of the device as well as the mountpoint if appropriate.
2014-10-30
        * 2.6.0-1 :
	traydvm now uses Qt5 GUI toolkit through Python bindings PyQt5 instead
	of Gtk3, where GtkStatusIcon is now deprecated
	the notification messages now use the message balloon feature of
	QWidgets.QSystemTrayIcon
	the dummy '-n, --noauto' command line option is removed
	the 'oxygen-icons' theme is used by default
2014-12-13
        * 2.6.1-1 :
	switch to the Qt4 GUI toolkit through Python bindings PyQt4
	because PyQt5 did not yet follow the Qt5 upgrade to 5.4.0
	and so is broken presently