@@ -1,6 +1,8 @@
+# Generated by mksrcinfo v8
+# Thu Apr 14 21:36:40 UTC 2016
 pkgbase = udisksvm
 	pkgdesc = GUI UDisks wrapper for removable media
-	pkgver = 2.6.1
+	pkgver = 2.6.2
 	pkgrel = 1
 	url = https://bbs.archlinux.org/viewtopic.php?id=112397
 	install = udisksvm.install
@@ -9,10 +11,10 @@ pkgbase = udisksvm
 	license = GPL
 	depends = udisks2
 	depends = python-gobject
-	depends = python-pyqt4
+	depends = python-pyqt5
 	depends = oxygen-icons
-	source = https://github.com/berbae/udisksvm/raw/master/udisksvm-2.6.1.tar.gz
-	sha1sums = 30711d67d7fad0969c09290edb6530f9e14ac627
+	source = https://github.com/berbae/udisksvm/raw/master/udisksvm-2.6.2.tar.gz
+	sha256sums = 75c2f3ea6e6e1666e873857015fcea8a405dbf378bfdba1cecda35f5779ffbe3
 
 pkgname = udisksvm
 
