@@ -16,18 +16,18 @@
 # 
 # Maintainer: Bernard Baeyens (berbae)  <berbae52 at sfr dot fr>
 pkgname=udisksvm
-pkgver=2.6.1
+pkgver=2.6.2
 pkgrel=1
 pkgdesc="GUI UDisks wrapper for removable media"
 arch=('any')
 url='https://bbs.archlinux.org/viewtopic.php?id=112397'
 license=('GPL')
-depends=('udisks2' 'python-gobject' 'python-pyqt4' 'oxygen-icons')
+depends=('udisks2' 'python-gobject' 'python-pyqt5' 'oxygen-icons')
 install=udisksvm.install
 changelog=ChangeLog
 source=("https://github.com/berbae/udisksvm/raw/master/$pkgname-$pkgver.tar.gz")
 
-sha1sums=('30711d67d7fad0969c09290edb6530f9e14ac627')
+sha256sums=('75c2f3ea6e6e1666e873857015fcea8a405dbf378bfdba1cecda35f5779ffbe3')
 
 package() {
   cd $srcdir
